RESOLVED FIXED43413
Fix warning in WebCore/plugins/win/PluginMessageThrottlerWin.cpp
https://bugs.webkit.org/show_bug.cgi?id=43413
Summary Fix warning in WebCore/plugins/win/PluginMessageThrottlerWin.cpp
Csaba Osztrogonác
Reported 2010-08-03 05:25:46 PDT
gcc warning: ..\..\..\WebCore\plugins\win\/PluginMessageThrottlerWin.h: In constructor 'WebCore::PluginMessageThrottlerWin::PluginMessageThrottlerWin(WebCore::PluginView*)': ..\..\..\WebCore\plugins\win\/PluginMessageThrottlerWin.h:69:16: warning: 'WebCore::PluginMessageThrottlerWin::m_lastMessageTime' will be initialized after ..\..\..\WebCore\plugins\win\/PluginMessageThrottlerWin.h:68:42: warning: 'WebCore::Timer<WebCore::PluginMessageThrottlerWin> WebCore::PluginMessageThrottlerWin::m_messageThrottleTimer' ..\..\..\WebCore\plugins\win\PluginMessageThrottlerWin.cpp:47:1: warning: when initialized here This warning introduced in http://trac.webkit.org/changeset/57650 , which added m_lastMessageTime member to class PluginMessageThrottlerWin.
Attachments
proposed fix (1.27 KB, patch)
2010-08-03 05:27 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2010-08-03 05:27:46 PDT
Created attachment 63327 [details] proposed fix
Adam Roben (:aroben)
Comment 2 2010-08-03 05:34:27 PDT
Comment on attachment 63327 [details] proposed fix r=me
Csaba Osztrogonác
Comment 3 2010-08-03 06:22:37 PDT
Comment on attachment 63327 [details] proposed fix Clearing flags on attachment: 63327 Committed r64548: <http://trac.webkit.org/changeset/64548>
Csaba Osztrogonác
Comment 4 2010-08-03 06:22:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.