2010-08-03  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Adam Roben.

        Fix warning in WebCore/plugins/win/PluginMessageThrottlerWin.cpp
        https://bugs.webkit.org/show_bug.cgi?id=43413

        * plugins/win/PluginMessageThrottlerWin.cpp:
        (WebCore::PluginMessageThrottlerWin::PluginMessageThrottlerWin): Modify initialization order.


Canonical link: https://commits.webkit.org/55370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64548 268f45cc-cd09-0410-ab3c-d52691b4dbfc